// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create Get-User-By-Id Controller Snapshot Test for empty user-id. 1`] = `
{
  "body": {
    "message": "Oops! user ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for invalid user-id. 1`] = `
{
  "body": {
    "message": "Invalid userID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for user found successfully. 1`] = `
{
  "body": {
    "data": {
      "_id": "507f1f77bcf86cd799439011",
      "articles": [],
      "email": "test@gmail.com",
      "fullname": "UserTest",
      "isActive": true,
      "password": "testPassword",
      "username": "test",
    },
    "message": "User found successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test for user not exist. 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Create Get-User-By-Id Controller Snapshot Test internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while finding user.",
    "success": false,
  },
  "status": 500,
}
`;
